--- a/skeleton/__openerp__.py.hbs
+++ b/skeleton/__openerp__.py.hbs
@@ -22,12 +22,12 @@
 {
     'name': '{{summary}}',
     'version': '{{shared_version}}',
-    'author': 'OpenJAF',
-    'website': 'http://www.openjaf.com',
+    'author': 'Cenit IO',
+    'website': 'https://cenit.io',
     #~ 'license': 'LGPL-3',
     'category': 'Integration',
     'description': """
-        Odoo - {{summary}} via Cenit
+        Odoo - {{summary}} via Cenit IO
     """,
     'depends': ['cenit_base'],
     'data': [
