--- a/skeleton/models/config.py.hbs
+++ b/skeleton/models/config.py.hbs
@@ -82,6 +82,7 @@ class CenitIntegrationSettings(models.TransientModel):
     ############################################################################
     # Actions
     ############################################################################
+{{#if pull_parameters}}
     def execute(self, cr, uid, ids, context=None):
         rc = super(CenitIntegrationSettings, self).execute(
             cr, uid, ids, context=context
@@ -113,3 +114,15 @@ class CenitIntegrationSettings(models.TransientModel):
         installer.pull_shared_collection(cr, uid, data.get('id'), params=params, context=context)
 
         return rc
+{{else}}
+    def install(self, cr, uid, context=None):
+        installer = self.pool.get('cenit.collection.installer')
+        data = installer.get_collection_data(
+            cr, uid,
+            COLLECTION_NAME,
+            version = COLLECTION_VERSION,
+            context = context
+        )
+
+        installer.install_collection(cr, uid, {'name': COLLECTION_NAME})
+{{/if}}
