Fixing up generation  when shared collection has no pull parameters.

--- a/skeleton/__openerp__.py.hbs
+++ b/skeleton/__openerp__.py.hbs
@@ -36,6 +36,8 @@
 {{#if pull_parameters}}
         'view/config.xml',
         'view/wizard.xml'
+{{else}}
+        'data/data.xml'
 {{/if}}
     ],
     'installable': True
