--- a/skeleton/__openerp__.py.hbs
+++ b/skeleton/__openerp__.py.hbs
@@ -26,7 +26,7 @@
     'website': 'https://cenit.io',
     # ~ 'license': 'LGPL-3',
     'category': 'Extra Tools',
-    'summary': '{{{summary}}}',
+    'summary': {{{JSON_STRINGIFY summary}}},
     'description': """
         Odoo - {{CAPITALIZE name}} integration via Cenit IO
     """,
