--- a/skeleton/view/wizard.xml.hbs
+++ b/skeleton/view/wizard.xml.hbs
@@ -22,7 +22,7 @@
                     </p>
                     <group>
                     {{#each pull_parameters}}
-                        <field name='{{key}}' placeholder='Your {{label}}'/>
+                        <field name='{{location.template_parameters.key}}' placeholder='Your {{label}}'/>
                     {{/each}}
                     </group>
                 </separator>
