--- a/skeleton/10.0/models/config.py.hbs
+++ b/skeleton/10.0/models/config.py.hbs
@@ -21,7 +21,7 @@
 
 import logging
 
-from openerp import models, fields
+from openerp import models, fields, api
 
 
 _logger = logging.getLogger(__name__)
@@ -112,7 +112,7 @@ class CenitIntegrationSettings(models.TransientModel):
         return rc
 {{else}}
     @api.model
-    def install(self, context=None):
+    def install(self):
         installer = self.env['cenit.collection.installer']
         data = installer.get_collection_data(
             COLLECTION_NAME,
