--- a/skeleton/10.0/view/wizard.xml.hbs
+++ b/skeleton/10.0/view/wizard.xml.hbs
@@ -22,7 +22,7 @@
                     </p>
                     <group>
                     {{#each pull_parameters}}
-                        <field name='{{location.template_parameters.key}}' placeholder='Your {{label}}'/>
+                        <field name='{{properties_locations.0.location.template_parameters.key}}' placeholder='Your {{label}}'/>
                     {{/each}}
                     </group>
                 </xpath>
