--- a/skeleton/9.0/view/config.xml.hbs
+++ b/skeleton/9.0/view/config.xml.hbs
@@ -17,7 +17,7 @@
                     <div>
                         <group string="{{title}} settings">
                         {{#each pull_parameters}}
-                            <field name='{{location.template_parameters.key}}' placeholder='Your {{label}}' />
+                            <field name='{{properties_locations.0.location.template_parameters.key}}' placeholder='Your {{label}}' />
                         {{/each}}
                         </group>
                     </div>
