--- a/skeleton/9.0/models/config.py.hbs
+++ b/skeleton/9.0/models/config.py.hbs
@@ -114,7 +114,6 @@ class CenitIntegrationSettings(models.TransientModel):
 
         installer.pull_shared_collection(cr, uid, data.get('id'), params=params, context=context)
         installer.install_common_data(cr, uid, data['data'])
-
         return rc
 {{else}}
     def install(self, cr, uid, context=None):
@@ -125,6 +124,6 @@ class CenitIntegrationSettings(models.TransientModel):
             version = COLLECTION_VERSION,
             context = context
         )
-
+        installer.pull_shared_collection(cr, uid, data.get('id'), context=context)
         installer.install_common_data(cr, uid, data['data'])
 {{/if}}
